fixes speia method