@@ -143,11 +143,11 @@ public class Pixels {
         int blue = 0;
 
         if (color == 'r') {
-            red = rgb.getFirst();
+            red = rgb.get(0);
         } else if (color == 'g') {
             green = rgb.get(1);
         } else if (color == 'b') {
-            blue = rgb.get(1);
+            blue = rgb.get(2);
         }
 
 
@@ -181,12 +181,17 @@ public class Pixels {
      */
     public static List<Integer> sepia(List<Integer> rgb) {
         // Extract the original red, green, and blue values
-
+        int red = rgb.get(0);
+        int green = rgb.get(1);
+        int blue = rgb.get(2);
         // Apply the sepia tone formula to each color component
+        int newRed = (int) Math.min(255, (Math.max(0, (0.0393 * red) + (0.769 * green) + (0.189 + blue))));
+        int newGreen = (int) Math.min(255, (Math.max(0, (0.349 * red) + (0.686 * green) + (0.168 + blue))));
+        int newBlue = (int) Math.min(255, (Math.max(0, (0.272 * red) + (0.534 * green) + (0.131 + blue))));
 
         // Update the RGB list with the new sepia values
 
-        return null;
+        return List.of(newRed, newGreen, newBlue);
     }
 
     /**
